# argo

./: .gitignore  LICENSE  README.md  argo_workflow.py  get_vocab.py  pyproject.toml  run_argo_workflow.sbatch  run_gem.slurm  train_fim.sbatch
argo/: frag_utils.py
argo/filter_models/: __init__.py
argo/gen_models/: README.md  api.py  gem.py  interface.py  test_f_rag_comprehensive.py  test_gen_models.py
argo/gen_models/f_rag/: model.py  optimizer.py
argo/gen_models/f_rag/fusion/: fuser.py  safegpt.py  sample.py  slicer.py  utils_eval.py
argo/gen_models/f_rag/fusion/trainer/: train.py  utils.py
argo/gen_models/f_rag/ga/: crossover.py  ga.py  mutate.py
argo/gen_models/gem/: __init__.py  cli.py  model.py  utils.py  workflow.py
argo/vocab/: __init__.py  test_vocab.csv  test_vocab.py
data/preprocess/: decompose_worker.py  playground.ipynb  preprocess.py  preprocess.slurm  similarity_worker.py
notebooks/: molmim.ipynb  playground.ipynb  safegpt.ipynb  sfcodec.ipynb
