[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "argo"
version = "0.1"
description = "A generative modeling package."
authors = [
    { name = "Shu-Hang Lin", email = "shuhang@unc.edu" }
]
readme = "README.md"
requires-python = ">=3.10"

# Optional: Add dependencies here
# dependencies = [
#     "numpy>=1.21",
#     "scipy>=1.7"
# ]

[tool.setuptools.packages.find]
where = ["."]
include = ["argo"]